shaku/tests/ui/component_missing_dependency.stderr
error[E0277]: the trait bound `TestModule: HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
   = help: the following implementations were found:
             <TestModule as HasComponent<<ComponentImpl as shaku::Component<TestModule>>::Interface>>
note: required because of the requirements on the impl of `shaku::Component<TestModule>` for `ComponentImpl`
  --> $DIR/component_missing_dependency.rs:14:10
   |
14 | #[derive(Component)]
   |          ^^^^^^^^^
15 | #[shaku(interface = ComponentTrait)]
16 | struct ComponentImpl {
   |        ^^^^^^^^^^^^^
   = note: this error originates in the macro `module` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TestModule: HasComponent<(dyn DependencyTrait + 'static)>` is not satisfied
  --> $DIR/component_missing_dependency.rs:22:1
   |
22 | / module! {
23 | |     TestModule {
24 | |         components = [ComponentImpl],
25 | |         providers = []
26 | |     }
27 | | }
   | |_^ the trait `HasComponent<(dyn DependencyTrait + 'static)>` is not implemented for `TestModule`
   |
  ::: $WORKSPACE/shaku/src/module/module_traits.rs
   |
   |   pub trait Module: ModuleInterface {
   |                     --------------- required by this bound in `Module`
   |
   = help: the following implementations were found:
             <TestModule as HasComponent<<ComponentImpl as shaku::Component<TestModule>>::Interface>>
note: required because of the requirements on the impl of `shaku::Component<TestModule>` for `ComponentImpl`
  --> $DIR/component_missing_dependency.rs:14:10
   |
14 | #[derive(Component)]
   |          ^^^^^^^^^
15 | #[shaku(interface = ComponentTrait)]
16 | struct ComponentImpl {
   |        ^^^^^^^^^^^^^
note: required because it appears within the type `TestModule`
  --> $DIR/component_missing_dependency.rs:23:5
   |
23 |     TestModule {
   |     ^^^^^^^^^^
   = note: this error originates in the macro `module` (in Nightly builds, run with -Z macro-backtrace for more info)
